# do-nothing-screenplay

./: README.md  example-script.yaml  pyproject.toml  requirements.txt
do_nothing_screenplay/: __main__.py
